Fix vertical-align for add-reaction svg

--- a/web_src/less/_repository.less
+++ b/web_src/less/_repository.less
@@ -2236,6 +2236,10 @@
             }
         }
 
+        .add-reaction > svg {
+            vertical-align: middle;
+        }
+
         &:hover .select-reaction a {
             display: block;
         }
